Sun Feb 20 16:26:45 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (exec_recursive): prevent temporary objects from GC.

	* prevent temporary objects from GC, and should not use
	  RSTRING_PTR() for function calls since it evaluates the argument
	  a couple of times.

Sun Feb 20 02:14:09 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (sig_trap): avoid pthread_sigmask(xx, &mask, &mask) usage
	  because FreeBSD don't permit it. If it's used, it behave as
	  pthread_sigmask(xx, NULL, &mask).

	* signal.c (init_sigchld): ditto.

Sat Feb 19 22:37:42 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* vm_insnhelper.c (vm_check_if_namespace): guard temporary object
	  from GC.

Fri Feb 18 00:28:39 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* compile.c (get_exception_sym2type): guard temporary object from GC.

Tue May  3 18:23:57 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/date/test_date.rb (TestDate#test_coerce):
	  test for [ruby-core:35127].

Sun Feb 13 00:48:47 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (Date#===): [ruby-core:35127]

Fri Feb 11 19:45:26 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_cleanup): use rb_ary_free to free internal object.

	* gc.h (RUBY_FREE_UNLESS_NULL): get rid of double free.
	  [ruby-core:35192]

Fri Feb 11 16:57:03 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_transcode.rb (test_from_cp50221): fix wrong
	  assertion and move back.

Tue Feb  8 01:00:21 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* process.c (proc_setgroups): add GC guard to prevent intermediate
	  variable from GC.

Mon Feb  7 22:56:16 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* lib/benchmark.rb (Benchmark#bmbm): use ensure clause instead of
	  Object#tap to restore STDOUT.sync.

Sun Feb  6 12:18:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (words, qwords): dispatch array events.  based on a
	  patch from Michael Edgar.  [Bug #4365].
