@@ -17,7 +17,7 @@ module Psych
       end
 
       def start_sequence anchor, tag, implicit, style
-        super(anchor, tag, implicit, Nodes::Sequence::FLOW)
+        super(anchor, nil, implicit, Nodes::Sequence::FLOW)
       end
     end
   end
